# slam14_czy

./: .gitignore  README.md
cap10/pose_graph_ceres_SE3/: 1.txt  CMakeLists.txt  readme.txt
cap10/pose_graph_ceres_SE3/src/: pose_graph_ceres_SE3.cpp  rotation.h
cap10/pose_graph_g2o_SE3/: CMakeLists.txt  readme.txt
cap10/pose_graph_g2o_SE3/src/: pose_graph_g2o_SE3.cpp
cap10/pose_graph_g2o_lie_algebra/: CMakeLists.txt  readme.txt  result_lie.g2o
cap10/pose_graph_g2o_lie_algebra/src/: pose_graph_g2o_lie_algebra.cpp
cap11/RP_11_1/: pr.py
cap11/TUM_11_2/: CMakeLists.txt  readme.txt
cap11/TUM_11_2/src/: tum.cpp
cap11/feature_training/: CMakeLists.txt  readme.txt
cap11/feature_training/src/: feature_training.cpp
cap11/gen_vocab_large/: CMakeLists.txt  readme.txt
cap11/gen_vocab_large/src/: gen_vocab_large.cpp
cap11/loop_closure/: CMakeLists.txt  readme.txt
cap11/loop_closure/src/: loop_closure.cpp
cap11/rgbd_dataset_freiburg1_desk2/: accelerometer.txt  depth.txt  rgb.txt
cap12/ban_dense_inversedepth/: CMakeLists.txt  readme.txt
cap12/ban_dense_inversedepth/src/: ban_dense_inversedepth.cpp
cap12/dense_RGBD/: CMakeLists.txt  readme.txt
cap12/dense_RGBD/src/: pointcloud_mapping.cpp
cap12/dense_mono/: CMakeLists.txt  readme.txt
cap12/dense_mono/src/: dense_mapping.cpp
cap12/octomap_mapping/: CMakeLists.txt  octomap.bt  readme.txt
cap12/octomap_mapping/src/: octomap_mapping.cpp
cap12/surfel_mapping/src/: surfel_mapping.cpp
cap13/slam_first/: CMakeLists.txt  readme.txt  readme_czy.txt
cap13/slam_first/app/: run_kitti_stereo.cpp
cap13/slam_first/config/: default.yaml
cap13/slam_first/include/myslam/: backend.h  camera.h  config.h  dataset.h  frontend.h  g2o_types.h  map.h  mappoint.h
cap13/slam_first/src/: backend.cpp  camera.cpp  config.cpp  dataset.cpp  frontend.cpp  map.cpp  viewer.cpp  visual_odometry.cpp
cap2/cmake_study/t1/: CMakeLists.txt  readme.txt
cap2/cmake_study/t2/: CMakeLists.txt  readme.txt
cap2/cmake_study/t2/src/: CMakeLists.txt  main.cpp
cap2/cmake_study/t3/: readme.txt
cap2/cmake_study/t3/lib/: CMakeLists.txt  hello.h
cap2/cmake_study/t4/: readme.txt
cap2/cmake_study/t4/src/: CMakeLists.txt  main.c
cap3/coordinateTransform/: CMakeLists.txt  readme.txt
cap3/coordinateTransform/src/: coordinateTransform.cpp
cap3/plotTrajectory/: CMakeLists.txt  readme.txt
cap3/plotTrajectory/src/: plotTrajectory.cpp
cap3/qiujie_pdf_2_5/: CMakeLists.txt  readme.txt
cap3/qiujie_pdf_2_5/src/: qiujie.cpp
cap3/useEigen/: CMakeLists.txt  readme.txt
cap3/useEigen/src/: eigenMatrix.cpp
cap3/useGeometry/: CMakeLists.txt  readme.txt
cap3/useGeometry/src/: useGeometry.cpp
cap3/visualizeGeometry/: CMakeLists.txt  readme_czy.txt
cap4/TrajectoryError/: CMakeLists.txt  readme.txt
cap4/TrajectoryError/src/: trajectoryError.cpp
cap4/useSophus/: CMakeLists.txt  readme.txt
cap4/useSophus/src/: useSophus.cpp
cap5/imageBasics/: CMakeLists.txt  readme.txt
cap5/imageBasics/src/: imageBasics.cpp
cap5/jointMap/: .7f370d5485357ee1e1879b83f74600d79e0044b.cam  CMakeLists.txt  readme.txt
cap5/jointMap/src/: joinMap.cpp
cap5/stereoVision/: CMakeLists.txt  readme.txt
cap5/stereoVision/src/: stereoVision.cpp
cap5/undistortimage/: CMakeLists.txt  readme.txt
cap5/undistortimage/src/: undistortImage.cpp
cap6/ceresCurveFitting/: CMakeLists.txt  readme.txt
cap6/ceresCurveFitting/src/: ceresCurveFitting.cpp
cap6/g2oCurveFitting/: CMakeLists.txt  readme.txt
cap6/g2oCurveFitting/src/: g2oCurveFitting.cpp
cap6/gaussNewton/: CMakeLists.txt  readme.txt
cap6/gaussNewton/src/: gaussNewton.cpp
cap7/kehouti/icp_ceres_10/: CMakeLists.txt  readme.txt
cap7/kehouti/icp_ceres_10/src/: icp_ceres.cpp
cap7/kehouti/icp_positionpoint_7/: CMakeLists.txt  readme.txt
cap7/kehouti/icp_positionpoint_7/src/: icp_positionpoint.cpp
cap7/kehouti/pnp_ceres_10/: CMakeLists.txt  readme.txt
cap7/kehouti/pnp_ceres_10/src/: pnp_ceres.cpp  rotation.h
cap7/kehouti/pnp_firstframe_6/: CMakeLists.txt  readme.txt
cap7/kehouti/pnp_firstframe_6/cmake_modules/: FindCSparse.cmake
cap7/kehouti/pnp_firstframe_6/src/: pnp_firstframe.cpp
cap7/kehouti/pnps_5/: CMakeLists.txt  readme.txt
cap7/kehouti/pnps_5/src/: pnps.cpp
cap7/orb_cv/: CMakeLists.txt  readme.txt
cap7/orb_cv/src/: orb_cv.cpp
cap7/orb_self/: CMakeLists.txt  readme.txt
cap7/orb_self/src/: orb_self.cpp
cap7/pose_estimation_2d2d/: CMakeLists.txt  readme.txt
cap7/pose_estimation_2d2d/src/: pose_estimation_2d2d.cpp
cap7/pose_estimation_3d2d/: CMakeLists.txt  readme.txt
cap7/pose_estimation_3d2d/src/: pose_estimation_3d2d.cpp
cap7/pose_estimation_3d3d/: CMakeLists.txt  readme.txt
cap7/pose_estimation_3d3d/src/: pose_estimation_3d3d.cpp
cap7/triangulation/: CMakeLists.txt  readme.txt
cap7/triangulation/src/: triangulation.cpp
cap8/direct_method/: CMakeLists.txt  readme.txt
cap8/direct_method/src/: direct_method.cpp
cap8/optical_flow/: CMakeLists.txt  readme.txt
cap8/optical_flow/src/: optical_flow.cpp
cap8/useLK_cv/: CMakeLists.txt  readme.txt
cap8/useLK_cv/src/: useLK.cpp
cap9/all_paras_ceres/: CMakeLists.txt  final.ply  readme.txt
cap9/all_paras_ceres/src/: SnavelyReprojectionError.h  all_paras_ceres.cpp
cap9/all_paras_g2o/: CMakeLists.txt  final_g2o.ply  initial.ply  readme.txt
cap9/all_paras_g2o/src/: all_paras_g2o.cpp  common.cpp  version  version.cpp
cap9/bundle_adjustment_ceres/: CMakeLists.txt
cap9/bundle_adjustment_ceres/src/: bundle_adjustment_ceres.cpp  common.cpp
cap9/bundle_adjustment_g2o/: CMakeLists.txt  final.ply
cap9/bundle_adjustment_g2o/src/: bundle_adjustment_g2o.cpp
cap9/ceres_bufen_schur/: CMakeLists.txt  final_Ceres.ply  readme.txt
cap9/ceres_bufen_schur/src/: ceres_bufen_schur.cpp
cap9/dataprocessing/: CMakeLists.txt  DataProcessing.cpp  common.h  readme.txt
